Closed
Bug 358033
Opened 15 years ago
Closed 3 years ago
Undo transaction doesn't remember focusNode part of the selection
Categories
(Core :: DOM: Editor, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox63 | --- | fixed |
People
(Reporter: martijn.martijn, Assigned: m_kato)
Details
Attachments
(2 files, 1 obsolete file)
To reproduce: - Put some text in a textarea - Select some text text from right to left/bottom to top - Pres delete - Press ctrl-z - Press the right or left arrow key Actual result: The caret appears at the right/bottom side of where the selection was. Expected result: The caret should appear at the left/top side of where the selection was.
Updated•14 years ago
|
QA Contact: editor
Reporter | ||
Updated•4 years ago
|
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → WORKSFORME
![]() |
||
Updated•4 years ago
|
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Any update on this regression? I'm seeing the issue again. Here's a test case to reproduce: https://codepen.io/cheng-lee/pen/yqywXa
Assignee | ||
Updated•3 years ago
|
Assignee: nobody → m_kato
Status: REOPENED → NEW
Assignee | ||
Updated•3 years ago
|
status-firefox63:
--- → affected
Priority: -- → P3
Assignee | ||
Comment 2•3 years ago
|
||
Updated•3 years ago
|
Attachment #8993575 -
Attachment is obsolete: true
Assignee | ||
Comment 3•3 years ago
|
||
SelectionState doesn't save and restore current selection's direction. So the direction of selection is always default after undoing. So we should restore direction of selection.
Assignee | ||
Comment 4•3 years ago
|
||
Assignee | ||
Comment 5•3 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=9acad815a63bd9b1d07d79ee567f1a41f013963a
Comment 6•3 years ago
|
||
Comment on attachment 8993578 [details] Bug 358033 - Part 1. Restore direction of Selection. r?masayuki Masayuki Nakano [:masayuki] (JST, +0900) has approved the revision. https://phabricator.services.mozilla.com/D2259
Attachment #8993578 -
Flags: review+
Comment 7•3 years ago
|
||
Comment on attachment 8993588 [details] Bug 358033 - Part 2. Add test. r?masayuki Masayuki Nakano [:masayuki] (JST, +0900) has approved the revision. https://phabricator.services.mozilla.com/D2260
Attachment #8993588 -
Flags: review+
Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/69f61d0f8f81 Part 1. Restore direction of Selection. r=masayuki
Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/0bc82dd8d837 Part 2. Add test. r=masayuki
Comment 10•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/69f61d0f8f81 https://hg.mozilla.org/mozilla-central/rev/0bc82dd8d837
Status: NEW → RESOLVED
Closed: 4 years ago → 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in
before you can comment on or make changes to this bug.
Description
•